[project]
name = "azo_ki"
description = "The Azoteq Keyboard Interface for IQS9320, IQS7220A, and IQS7320A devices."
version = "0.2.0"
maintainers = [
  { name = "hennie", email = "hennie.vanderwesthuizen@azoteq.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyserial"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.license]
file = "LICENSE"
